--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -10,13 +10,13 @@
   </welcome-file-list>
   
   <servlet>
-  	<servlet-name>userLoginServiceImp</servlet-name>
-  	<servlet-class>com.tangledcode.lang8.server.service.UserLoginServiceImp</servlet-class>
+  	<servlet-name>userServiceImp</servlet-name>
+  	<servlet-class>com.tangledcode.lang8.server.service.UserServiceImp</servlet-class>
   </servlet>
   
   <servlet-mapping>
-  	<servlet-name>userLoginServiceImp</servlet-name>
-  	<url-pattern>/lang8/login</url-pattern>
+  	<servlet-name>userServiceImp</servlet-name>
+  	<url-pattern>/lang8/user</url-pattern>
   </servlet-mapping>
 
 </web-app>
