--- a/pom.xml
+++ b/pom.xml
@@ -26,78 +26,78 @@
 	</repositories>
 
 	<dependencies>
-		<dependency>
-			<groupId>com.google.gwt</groupId>
-			<artifactId>gwt-servlet</artifactId>
-			<version>2.0.3</version>
-			<type>jar</type>
-			<scope>runtime</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.google.gwt</groupId>
-			<artifactId>gwt-user</artifactId>
-			<version>2.0.3</version>
-			<type>jar</type>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.8.1</version>
-			<type>jar</type>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.google.gwt.inject</groupId>
-			<artifactId>gin</artifactId>
-			<version>1.0</version>
-			<type>jar</type>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.enunes.gwt.mvp</groupId>
-			<artifactId>gwt-mvp</artifactId>
-			<version>1.0.1</version>
-			<type>jar</type>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.tangledcode</groupId>
-			<artifactId>utils</artifactId>
-			<version>1.0.1</version>
-			<type>jar</type>
-			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate</artifactId>
-			<version>3.2.7.ga</version>
-			<type>jar</type>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-simple</artifactId>
-			<version>1.6.0</version>
-			<type>jar</type>
-		</dependency>
-		<dependency>
-			<groupId>postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<version>8.4-701.jdbc4</version>
-			<type>jar</type>
-		</dependency>
-		<dependency>
-			<groupId>javassist</groupId>
-			<artifactId>javassist</artifactId>
-			<version>3.8.0.GA</version>
-			<type>jar</type>
-		</dependency>
-		<dependency>
-			<groupId>javax.transaction</groupId>
-			<artifactId>jta</artifactId>
-			<version>1.0.1B</version>
-			<scope>compile</scope>
-		</dependency>
+		<!-- <dependency>
+		      <groupId>com.google.gwt</groupId>
+		      <artifactId>gwt-servlet</artifactId>
+		      <version>2.0.3</version>
+		      <type>jar</type>
+		      <scope>runtime</scope>
+		    </dependency>
+		    <dependency>
+		      <groupId>com.google.gwt</groupId>
+		      <artifactId>gwt-user</artifactId>
+		      <version>2.0.3</version>
+		      <type>jar</type>
+		      <scope>provided</scope>
+		    </dependency>
+		    <dependency>
+		      <groupId>junit</groupId>
+		      <artifactId>junit</artifactId>
+		      <version>4.8.1</version>
+		      <type>jar</type>
+		      <scope>test</scope>
+		    </dependency>
+		    <dependency>
+		      <groupId>com.google.gwt.inject</groupId>
+		      <artifactId>gin</artifactId>
+		      <version>1.0</version>
+		      <type>jar</type>
+		      <scope>provided</scope>
+		    </dependency>
+		    <dependency>
+		      <groupId>org.enunes.gwt.mvp</groupId>
+		      <artifactId>gwt-mvp</artifactId>
+		      <version>1.0.1</version>
+		      <type>jar</type>
+		      <scope>provided</scope>
+		    </dependency>
+		    <dependency>
+		      <groupId>com.tangledcode</groupId>
+		      <artifactId>utils</artifactId>
+		      <version>1.0.1</version>
+		      <type>jar</type>
+		      <scope>compile</scope>
+		    </dependency>
+		    <dependency>
+		      <groupId>org.hibernate</groupId>
+		      <artifactId>hibernate</artifactId>
+		      <version>3.2.7.ga</version>
+		      <type>jar</type>
+		    </dependency>
+		    <dependency>
+		      <groupId>org.slf4j</groupId>
+		      <artifactId>slf4j-simple</artifactId>
+		      <version>1.6.0</version>
+		      <type>jar</type>
+		    </dependency>
+		    <dependency>
+		      <groupId>postgresql</groupId>
+		      <artifactId>postgresql</artifactId>
+		      <version>8.4-701.jdbc4</version>
+		      <type>jar</type>
+		    </dependency>
+		    <dependency>
+		      <groupId>javassist</groupId>
+		      <artifactId>javassist</artifactId>
+		      <version>3.8.0.GA</version>
+		      <type>jar</type>
+		    </dependency>
+		    <dependency>
+		      <groupId>javax.transaction</groupId>
+		      <artifactId>jta</artifactId>
+		      <version>1.0.1B</version>
+		      <scope>compile</scope>
+		    </dependency> -->
 	</dependencies>
 
 	<build>
