--- a/pom.xml
+++ b/pom.xml
@@ -30,14 +30,12 @@
 			<groupId>com.google.gwt</groupId>
 			<artifactId>gwt-servlet</artifactId>
 			<version>2.0.3</version>
-			<type>jar</type>
-			<scope>runtime</scope>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.google.gwt</groupId>
 			<artifactId>gwt-user</artifactId>
 			<version>2.0.3</version>
-			<type>jar</type>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -138,7 +136,7 @@
 				<artifactId>gwt-maven-plugin</artifactId>
 				<version>1.2</version>
 				<configuration>
-					<output>${basedir}/war</output>
+					<webappDirectory>${basedir}/war</webappDirectory>
 					<webXml>${basedir}/war/WEB-INF/web.xml</webXml>
 					<hostedWebapp>${basedir}/war</hostedWebapp>
 					<runTarget>index.html</runTarget>
@@ -175,16 +173,6 @@
 					<source>${maven.compiler.source}</source>
 					<target>${maven.compiler.target}</target>
 					<encoding>UTF-8</encoding>
-				</configuration>
-			</plugin>
-			
-			<plugin>
-				<groupId>org.mortbay.jetty</groupId>
-				<artifactId>maven-jetty-plugin</artifactId>
-				<version>6.1.10</version>
-				<configuration>
-					<webAppSourceDirectory>${basedir}/war</webAppSourceDirectory>
-					<webXml>${basedir}/war/WEB-INF/web.xml</webXml>
 				</configuration>
 			</plugin>
 			
