TextSearch widget with presenter and everts added. Not full implemented

--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -14,9 +14,15 @@
   	<servlet-class>com.tangledcode.lang8.server.service.UserServiceImp</servlet-class>
   </servlet>
   
+  
   <servlet>
   	<servlet-name>groupServiceImp</servlet-name>
   	<servlet-class>com.tangledcode.lang8.server.service.GroupServiceImp</servlet-class>
+  </servlet>
+  
+   <servlet>
+  	<servlet-name>languageServiceImp</servlet-name>
+  	<servlet-class>com.tangledcode.lang8.server.service.LanguageServiceImp</servlet-class>
   </servlet>
   
   <servlet-mapping>
@@ -27,6 +33,11 @@
   <servlet-mapping>
   	<servlet-name>groupServiceImp</servlet-name>
   	<url-pattern>/lang8/group</url-pattern>
+  </servlet-mapping>
+  
+  <servlet-mapping>
+  	<servlet-name>languageServiceImp</servlet-name>
+  	<url-pattern>/lang8/languages</url-pattern>
   </servlet-mapping>
 
 </web-app>
