--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -14,6 +14,11 @@
   	<servlet-class>com.tangledcode.lang8.server.service.UserServiceImp</servlet-class>
   </servlet>
   
+    <servlet>
+  	<servlet-name>textServiceImp</servlet-name>
+  	<servlet-class>com.tangledcode.lang8.server.service.TextServiceImp</servlet-class>
+  </servlet>
+  
   
   <servlet>
   	<servlet-name>groupServiceImp</servlet-name>
@@ -38,6 +43,11 @@
   <servlet-mapping>
   	<servlet-name>languageServiceImp</servlet-name>
   	<url-pattern>/lang8/languages</url-pattern>
+  </servlet-mapping>
+  
+    <servlet-mapping>
+  	<servlet-name>textServiceImp</servlet-name>
+  	<url-pattern>/lang8/sendText</url-pattern>
   </servlet-mapping>
 
 </web-app>
